# cargo-interactive-update

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yaml  release.yaml
src/: api.rs  args.rs  cargo.rs  cli.rs  dependency.rs  main.rs
test/src/: main.rs
tests/: Cargo.toml  README.md
tests/src/: main.rs
