[package]
edition = "2021"
name = "cargo-interactive-update"
version = "0.1.0"

[dependencies]
basic-toml = "0.1.9"
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }
curl = "0.4.47"
semver = "1.0.23"
serde_json = "1.0.128"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
