[package]
edition = "2021"
name = "cargo-interactive-update"
version = "0.3.0"
authors = ["Benoît Jeaurond <benoit@jeaurond.dev>"]
description = "A cargo extension CLI tool to update your cargo direct dependencies interactively to the latest version"
repository = "https://github.com/benjeau/cargo-interactive-update"
license = "MIT"
keywords = ["cargo", "update", "interactive"]
categories = ["command-line-utilities"]

[dependencies]
basic-toml = "0.1.9"
clap = { version = "4.5.20", features = ["derive"] }
clap-cargo = "0.14.1"
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }
curl = "0.4.47"
semver = "1.0.23"
serde_json = "1.0.128"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
