[package]
edition = "2021"
name = "cargo-interactive-update"
version = "0.6.1"
authors = ["Benoît Jeaurond <benoit@jeaurond.dev>"]
description = "A cargo extension CLI tool to update your cargo direct dependencies interactively to the latest version"
repository = "https://github.com/benjeau/cargo-interactive-update"
license = "MIT"
keywords = ["cargo", "update", "interactive"]
categories = ["command-line-utilities"]

[dependencies]
cargo-lock = "10.1.0"
clap = { version = "4.5.29", features = ["derive"] }
clap-cargo = "0.15.2"
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }
curl = "0.4.47"
semver = "1.0.25"
serde_json = "1.0.138"
termbg = "0.6.2"
toml_edit = "0.22.24"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
